# gamma-technologies-demo

./: .gitignore  AGENTS.md  AMP_DEMO.md  AMP_PROMPTS.md  DELIVERABLES.md  DEMO_GUIDE.md  DEMO_STATUS.md  QUICK_START.md  README.md  clean_emojis.sh  colab_gpu_demo_optimized.ipynb  prepare_colab_demo.sh  progress.md  setup_amp_demo.sh  test_demo.sh
.slurm/: run_kokkos.sbatch
agents/prompts/: stage1_explain_prompt.md  stage2_plan_prompt.md  stage3_review_prompt.md
algorithms/tridiag_thomas/: stage.yml
colab_package/: .gitignore  COLAB_README.md  README.md  amp-guidance.md  colab_gpu_demo.ipynb  colab_gpu_demo_optimized.ipynb  compare_outputs.py  mitgcm_demo.f90  profile_rocprof.sh  progress.md  run_fortran.sh  run_kokkos.sh
colab_package/ep/src/: kernel.cpp
colab_package/mitgcm_demo_optimized/src/: kernel.cpp
docs/: amp-guidance.md
docs/guides/: stage_flow.md
fortran/: cg.f90  ep.f90
kokkos/cg/src/: kernel.cpp
kokkos/ep_optimized.reference/src/: kernel.cpp
kokkos/mitgcm_demo/src/: kernel.cpp
kokkos/mitgcm_demo_optimized.reference/: CMakeLists.txt
tools/: build_kokkos.sh  consult_oracle.sh  explain_mitgcm.py  extract_fortran_routine.sh  gen_callgraph.py  prepare_colab_package.sh  profile_ncu.sh  spawn_subagents.sh  stage_runner.py
